--- a/package.json
+++ b/package.json
@@ -21,18 +21,20 @@
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
+    "jszip": "^3.10.1",
     "mongoose": "^6.9.0",
     "mysql": "^2.18.1",
     "save": "^2.9.0",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.6.2",
-    "xss-clean": "^0.1.1"
+    "xss-clean": "^0.1.1",
+    "zip": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
     "tailwindcss": "^3.2.4"
   },
-  "engines" : {
-    "node" : "18.12.0"
+  "engines": {
+    "node": "18.12.0"
   }
 }
